--- a/spedition/SpeditionClient/app/src/main/res/layout/note_edit_dialog.xml
+++ b/spedition/SpeditionClient/app/src/main/res/layout/note_edit_dialog.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ListView
         android:id="@+id/noteList"
         android:layout_width="0dp"
-        android:layout_height="128sp"
+        android:layout_height="96sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
