--- a/spedition/SpeditionClient/app/src/main/res/menu/edit_menu.xml
+++ b/spedition/SpeditionClient/app/src/main/res/menu/edit_menu.xml
@@ -14,6 +14,11 @@
         android:title="@string/close"
         app:showAsAction="ifRoom"/>
     <item
+        android:id="@+id/done"
+        android:icon="@android:drawable/checkbox_on_background"
+        android:title="@string/done"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/remove"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/delete"
