--- a/spedition/SpeditionClient/app/src/main/res/menu/edit_menu.xml
+++ b/spedition/SpeditionClient/app/src/main/res/menu/edit_menu.xml
@@ -16,7 +16,7 @@
     <item
         android:id="@+id/done"
         android:icon="@android:drawable/checkbox_on_background"
-        android:title="@string/done"
+        android:title="@string/report_done"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/removeToken"
